# ai-drama-generator

./: .env.example  .gitignore  ARCHITECTURE.txt  Cargo.toml  README.md  SETUP.md  config.free.toml  config.toml  install.sh
docs/: CONFIG.md  COST.md  QUICKSTART.md  TROUBLESHOOTING.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ProgressDisplay.tsx
frontend/src/pages/: ConfigPage.tsx  ProgressPage.tsx
frontend/src/types/: index.ts
scripts/: sadtalker.py
src/: batch.rs  config.rs  errors.rs  factory.rs  main.rs  pipeline.rs  progress.rs  tempfile.rs  traits.rs
src/api/: mod.rs  models.rs  routes.rs  sse.rs  tasks.rs
src/generators/: claude.rs  edge_tts.rs  mod.rs  script.rs  video.rs  voice.rs
templates/: romance.txt
